@@ -70,15 +70,10 @@ openApiGenerate {
 			useJakartaEe: "true"
 	]
 }
-//
-//tasks.named('test') {
-//	useJUnitPlatform()
-//	jvmArgs += [
-//			'-XX:+EnableDynamicAgentLoading',
-//			'-Djdk.instrument.traceUsage=false'
-//	]
-//	enabled = false
-//}
+
+tasks.named('test') {
+	enabled = false
+}
 tasks.named('compileJava').configure{
 	dependsOn('openApiGenerate')
 }
